--- a/src/Pages/Home/Allproduct.css
+++ b/src/Pages/Home/Allproduct.css
@@ -6,3 +6,15 @@
 .slider-img img{
     width: 100%;
 }
+.all-card-img{
+    padding-top: 10px;
+}
+.all-card-img img{
+    height: 300px;
+    width: 100%;
+    padding-top: 10px;
+}
+.services-card{
+     background: #f3f3f3;
+
+}
