--- a/src/Pages/Dashboard/Dashboard.css
+++ b/src/Pages/Dashboard/Dashboard.css
@@ -1,10 +1,10 @@
-
-.form-wrap input,
+.card-manage{
+    width: 80%;
+    margin: 0 auto;
+}
+.card-manage input,
 textarea{
     padding: 20px 15px;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  
-}
-.max-w-xs {
-    max-width: 100%;
+    font-size: 17px;
 }
