--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F4F8FC;
-  
-
+  font-family: 'Roboto', sans-serif;
 
 }
 
